<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string
        name="server"
	>Server</string>
    <string
        name="port"
        >Port</string>
    <string
        name="user"
        >Username</string>
    <string
        name="password"
        >Password</string>
    <string
        name="host"
        >Host name</string>
    <string
        name="apply"
        >Apply settings</string>
     <string
	name="pref_serv_title"
	>Server</string>
<string
        name="pref_host_title"
	>Host</string>
</resources>
