<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars="none" >
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical" >
	    <EditText
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/server"
		android:id="@+id/server" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port"
                android:id="@+id/port" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:id="@+id/user" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/password" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/host"
                android:id="@+id/host" />
	<Button
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:text="@string/apply"
                android:id="@+id/apply" />
        </LinearLayout>
</ScrollView>

